--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,8 @@
-<my-app>loading</my-app>
+<html>
+  <head>
+    <title>Angular App</title>
+  </head>
+  <body>
+  <app-component>loading</app-component>
+  </body>
+</html>
